--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,6 +13,10 @@
     --soft-orange-red: #DA7F6E;
     --soft-red: #D75B52;
     --purple: #742E64;
+
+    --hover-orange: #FF974C;
+    --hover-light-purple: #AA5183;
+    --hover-dark-pink: #9C0058;
 }
 
 body{
@@ -61,6 +65,10 @@ header{
 header a{
     text-decoration: none;
     color: var(--dark-orange);
+}
+
+header a:hover{
+    color: var(--hover-orange);
 }
 
 header .flex{
@@ -192,6 +200,7 @@ nav .icons{
     display: flex;
     justify-content: space-between;
     margin-top: 3em;
+    transition: 1.5s;
 }
 
 .primary-btn{
@@ -205,6 +214,7 @@ nav .icons{
     text-align: center;
     border: 1px solid var(--purple);
     cursor: pointer;
+    transition: 0.5s;
 }
 
 .secundary-btn{
@@ -217,8 +227,20 @@ nav .icons{
     min-width: 150px;
     text-align: center;
     cursor: pointer;
+    transition: 0.5s;
 }
 
+.secundary-btn:hover{
+    background-color: var(--hover-light-purple);
+    color: var(--extra-light-pink);
+    border: 1px solid var(--hover-light-purple);
+}
+
+.primary-btn:hover{
+    background-color: var(--hover-dark-pink);
+    color: var(--extra-light-pink);
+    border: 1px solid var(--hover-dark-pink);
+}
 
 /* ______________________________ projects_____________________________________ */
 
