--- a/public/css/project-page.css
+++ b/public/css/project-page.css
@@ -120,27 +120,60 @@ body .content{
     text-align: left;
 }
 
-.info-sidebar .project-img, .info-sidebar .process-img{
-    width: 100%;
-    height: 18rem;
-    background-color: #CA6046;
-    border-radius: 20px;
-    position: relative;
+/* Hide the images by default */
+.project-img .mySlides {
+  display: none;
 }
 
-.info-sidebar .project-img .fa-solid{
+.process-img .process-slides {
+  display: none;
+}
+
+.process-img img, .project-img img, video{
+    width: 100%;
+    height: 100%;
+    -o-object-fit: contain;
+       object-fit: contain;
+    border-radius: 20px;
+    max-height: 400px;
+}
+
+.info-sidebar .project-img, .info-sidebar .process-img{
+    width: 100%;
+    height: -webkit-max-content;
+    height: -moz-max-content;
+    height: max-content;
+    /* background-color: #CA6046; */
+    border-radius: 20px;
+    position: relative;
+    box-shadow: 4px 4px 15px -7px rgba(47, 47, 47, 0.82);
+}
+
+.project-img .fa-solid, .process-img .fa-solid{
     font-size: 21px;
     cursor: pointer;
     position: absolute;
     top: 40%;
     color: var(--extra-light-pink);
 }
-.info-sidebar .project-img .fa-chevron-left{
+
+.info-sidebar .project-img .fa-chevron-left, .info-sidebar .process-img .fa-chevron-left{
     left: 3%;
+    color: var(--pink);
 }
 
-.info-sidebar .project-img .fa-chevron-right{
+.project-img .fa-chevron-left:hover, .process-img .fa-chevron-left:hover, .project-img .fa-chevron-right:hover, .process-img .fa-chevron-right:hover{
+    background-color: var(--soft-orange-red);
+    color: white;
+    padding: 0.5em;
+    border-radius: 2em;
+    transition: 1s;
+}
+
+
+ .project-img .fa-chevron-right, .process-img .fa-chevron-right{
     right: 3%;
+    color: var(--pink);
 }
 
 .info-sidebar .technologies-tags{
