--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -248,6 +248,36 @@ nav .icons{
     height: 300px;
     border-radius: 1em;
     text-decoration: none;
+    transition: 1s;
+    position: relative;
+}
+
+.project img{
+    width: 100%;
+    margin: auto 0;
+    display: block;
+    height: 100%;
+    object-fit: contain;
+    transition: 1s;
+}
+
+.project h3{
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    width: 100%;
+    text-align: center;
+    color: white;
+    transition: 1s;
+    opacity: 0;
+}
+
+.project:hover img{
+    opacity: 0;
+}
+
+.project:hover h3{
+    opacity: 1;
 }
 
 /* _______________________ contact _______________________________ */
